<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TimeBankingApp</string>
    <string name="fragment_profile_location">Location</string>
    <string name="fragment_profile_email">E-mail</string>
    <string name="fragment_profile_nickname">Nickname</string>
    <string name="fragment_profile_full_name">Full Name</string>
    <string name="fragment_profile_description">Description</string>
    <string name="fragment_profile_balance">Balance</string>
    <string name="fragment_profile_skills">Skills</string>
    <string name="fragment_profile_upload_button">Upload Button</string>
    <string name="fragment_profile_new_skill">New skill</string>
    <string name="fragment_profile_add_new_skill">Add</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="fragment_timeslot_description">Description</string>
    <string name="fragment_timeslot_restrictions">Restrictions</string>
    <string name="fragment_timeslot_title">Title</string>
    <string name="fragment_timeslot_date">Date of the offer</string>
    <string name="fragment_timeslot_time">Time</string>
    <string name="fragment_timeslot_duration">Duration (hours)</string>
    <string name="fragment_timeslot_location">Location</string>
    <string name="menu_edit_button">Edit</string>
    <string name="menu_drawer_timeslots_list">Your advertisements</string>
    <string name="time_slots_item_title">Title</string>
    <string name="time_slots_edit_icon">timeSlotEditIcon</string>
    <string name="time_slots_item_duration">3h</string>
    <string name="time_slots_item_duration_label">Estimated time:</string>
    <string name="time_slots_item_start">01/01/2022 – 00:00</string>
    <string name="time_slots_item_start_label">Starts at:</string>
    <string name="time_slots_item_location">Location example</string>
    <string name="menu_drawer_show_profile">Show Profile</string>
    <string name="add_timeslot">add timeslot</string>
    <string name="timeslot_splash">" "</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="my_web_client_id" tools:ignore="TypographyDashes">1031805806645-6530divvc0r01nm9dhik0kholhtabh8h.apps.googleusercontent.com</string>
    <string name="login_error">Login error</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_timeslot_related_skill">Related skill</string>
    <string name="menu_drawer_all_published_offers">All available offers</string>
    <string name="skills_list_title">Select a skill</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="sign_out">sign out</string>
    <string name="menu_show_user_profile">Show user profile</string>
    <string name="skill_specific_filter_by_text">Filter by:</string>
    <string name="filter_parameter">Sort parameter</string>
    <string name="filter_bar_hint">Write here to filter</string>
    <string-array name="filter_parameters_array">
        <item>Title</item>
        <item>Location</item>
        <item>Date</item>
        <item>Duration</item>
    </string-array>
    <string name="filter_and_sort_option">Filter and Sort</string>
    <string name="chats">Chats</string>
    <string name="chat_user_icon">User Icon</string>
    <string name="chat_fullname">Name Surname</string>
    <string name="chat_message">Message</string>
    <string name="chat_time">00:00</string>
    <string name="chat_date">01/01/1970</string>
    <string name="chat_button_description">Open a chat with the </string>
    <string name="chat_list_item_fullname">Nome Cognome</string>
    <string name="chat_list_item_timestamp">01/01/70</string>
    <string name="chat_list_item_message">[Tu]: Messaggio in anteprima</string>
    <string name="no_time_slots_available">No time slots available</string>
    <string name="no_advertisements">No Advertisements</string>
    <string name="there_aren_t_any_offers">Sorry, but at the moment there aren\'t any available offers. Try again later!</string>
    <string name="fragment_show_profile_review_rating_score">Rating score</string>
    <string name="rating_bar">Rating Bar</string>
    <string name="n_reviews">0 reviews</string>
    <string name="discard">Discard</string>
    <string name="accept">Accept</string>
    <string name="hint_enter_message">Enter Message</string>
    <string name="send">Send</string>
    <string name="show_all_reviews">Show all Reviews</string>
    <string name="fragment_profile_reviews_label">Reviews</string>
    <string name="reviews_item_timestamp">Timestamp</string>
    <string name="reviews_item_review_text">Review Text</string>
    <string name="your_interesting_offers">Your interesting offers</string>
    <string name="reviews_list_item_full_name">Full Name</string>
    <string name="add_review_text_hint">Write something here (optional)</string>
    <string name="add_review">Add Review</string>
    <string name="delete">Delete</string>
    <string name="close">close</string>
    <string name="dialog_delete_confirmation">Do you want to delete it?</string>
    <string name="january_1970">January 1970</string>
    <string name="location_label">Location:</string>
    <string name="all_reviews_of_label">All reviews of:</string>
    <string name="calendar_item_ts_title">Time slot Title</string>
    <string name="ads_you_re_interested_in">Ads you\'re interested in</string>
    <string name="time_slots_calendar">Time slots Calendar</string>
    <string name="email">email</string>
    <string name="balance_label">0 hours</string>
    <string name="balance_l">Balance:</string>
    <string name="reviews_list_item_empty_message">Sadly, there are no reviews yet for this user</string>
    <string name="rating_score_warning_label">Rating score is mandatory</string>
    <string name="time_slots_item_type_label">Type:</string>
    <string name="time_slot_title">time_slot_title</string>
    <string name="requester_or_offerer">Requester or Offerer</string>
    <string name="completed_time_slots">Completed time slots</string>
    <string name="this_service_has_been_assigned_to_another_user">:( \nThis Service has been assigned to another user!</string>
    <string name="complete_task">Complete task</string>
    <string name="no_chats_available">No chats available!</string>
    <string name="are_you_really_sure_you_want_to_mark_it_as_completed">Are you really sure you want to mark it as completed?</string>
    <string name="confirm">Confirm</string>
    <string name="undo">Undo</string>
    <string name="time_slot_title_label">Time slot Title:</string>
    <string name="request_service">Request service</string>
    <string name="you_assigned_service_to_another">You have already assigned this Service to another user!</string>
    <string name="assigned_to_him">:) \n You have already assigned this Service to this User</string>
    <string name="assigned_to_you">:) \nThis Service has already been assigned to you!</string>
    <string name="service_not_available">Service not available</string>
    <string name="service_assigned_to_another">Service could been assigned to another user or your request has been discarded!</string>
    <string name="publish_review">publish</string>
</resources>