<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_skillsList"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_drawer_all_published_offers"
            />
        <item
            android:id="@+id/nav_showProfile"
            android:icon="@drawable/ic_baseline_account_box_24"
            android:title="@string/menu_drawer_show_profile"
            />
        <item
            android:id="@+id/nav_personalTimeSlotList"
            android:icon="@drawable/ic_baseline_list_24"
            android:title="@string/menu_drawer_timeslots_list"
            />
        <item
            android:id="@+id/nav_interestingTimeSlotList"
            android:icon="@drawable/ic_baseline_list_24"
            android:title="@string/your_interesting_offers"
            />
        <item
            android:id="@+id/nav_chatsList"
            android:icon="@drawable/ic_baseline_list_24"
            android:title="@string/chats"
            />
        <item
            android:id="@+id/nav_addReview"
            android:icon="@drawable/ic_baseline_list_24"
            android:title="Add review (TEMP LINK)"
            />
        <item
            android:id="@+id/nav_timeSlotMonthCalendar"
            android:icon="@drawable/ic_baseline_list_24"
            android:title="Time slots Calendar"
            />

    </group>
</menu>