<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:padding="16dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_end="64dp" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:barrierMargin="8dp"
                app:constraint_referenced_ids="time_slots_edit_button"
                tools:layout_editor_absoluteX="181dp"
                tools:layout_editor_absoluteY="26dp" />

            <TextView
                android:id="@+id/time_slots_item_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/time_slots_item_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/time_slots_edit_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:backgroundTint="?attr/colorPrimary"
                android:contentDescription="@string/time_slots_edit_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_edit_24" />

            <TextView
                android:id="@+id/time_slots_item_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/time_slots_item_location"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/time_slots_item_title" />

            <ImageView
                android:id="@+id/chat_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/chat_button_description"
                android:minWidth="48dp"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@id/barrier"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_outline_chat_24"
                app:tint="@color/primary" />

            <TextView
                android:id="@+id/time_slots_item_start_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/time_slots_item_start_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#808080"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/time_slots_item_location" />

            <TextView
                android:id="@+id/time_slots_item_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_slots_item_start"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintBottom_toBottomOf="@+id/time_slots_item_start_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.06"
                app:layout_constraintStart_toEndOf="@+id/time_slots_item_start_label"
                app:layout_constraintTop_toTopOf="@+id/time_slots_item_start_label" />

            <TextView
                android:id="@+id/time_slots_item_duration_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/time_slots_item_duration_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#808080"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/time_slots_item_start_label" />

            <TextView
                android:id="@+id/time_slots_item_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/time_slots_item_duration"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintBottom_toBottomOf="@+id/time_slots_item_duration_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.06"
                app:layout_constraintStart_toEndOf="@+id/time_slots_item_duration_label"
                app:layout_constraintTop_toTopOf="@+id/time_slots_item_duration_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>